<resources>
    <string name="app_name">MovieMagazine</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="not_a_user_register_now_in_moviemagazine">Not a User? Register Now in MovieMagazine!</string>
    <string name="provide_us_your_registred_email_id_to_send_instructions_for_reseting_password">Provide us your Registred Email-id to send instructions for reseting Your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="return_to_login_activity">Return to Login Activity</string>
    <string name="register">Register</string>
    <string name="title_activity_categories">MovieMagazine</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appwidget_text">EXAMPLE</string>
...
