...
                    android:textAllCaps="false"
                    android:textColor="@color/PUREWHITE"
                    android:textSize="@dimen/dime15sp"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/id_buttonnewuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10dp"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:onClick="clickNewUser"
...
